hd/gifts popup: trying a workaround for google chome bug on scrollbar

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -333,8 +333,7 @@ body {
     border-radius:5px;
     box-shadow:0px 0px 2px grey inset;
     padding:12px;
-    overflow-x:none;
-    overflow-y:scroll;
+    overflow:scroll;
     max-height:450px;
 }
 
